test/shouldPass/expr/unMinusInt.pas
program Sample;
var
  i : integer;

begin
  i := - 3000;
  writeln(i);
end.
