test/shouldFail/vonJonas/invalid_identifier05.pas

program InvalidIdentifier05;

var 
  ƛ : integer;
begin
end.
